<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registroActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="137dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="37dp"
        android:text="@string/lblRCorreo" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="137dp"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginTop="90dp"
        android:text="@string/lblRClave" />

    <Button
        android:id="@+id/button2"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="23dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btnRGrabar" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="137dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginTop="189dp"
        android:text="@string/lblREdad" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="141dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginBottom="222dp"
        android:text="@string/lblRSexo" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="136dp"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginTop="141dp"
        android:text="@string/lblRDni" />
</RelativeLayout>