<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorIcons"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="101dp"
        android:background="#5BC500"
        android:fontFamily="@font/audiowide"
        android:text="@string/btnMIniciarSesion"
        android:textColor="@android:color/background_light" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="356dp"
        android:layout_height="72dp"

        android:layout_above="@+id/chkGuardarSesion"
        android:layout_alignParentStart="true"
        android:backgroundTint="#17B1E3"
        android:textColorHint="#17B1E3"

        app:passwordToggleEnabled="true">

        <EditText
            android:textStyle="bold"
            android:id="@+id/txtClave"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:backgroundTint="#17B1E3"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/lblMContraseniaRequerido"
            android:inputType="textPassword"
            android:textColor="#17B1E3"
            android:textColorHint="#17B1E3"
            android:textColorLink="#17B1E3"
            android:textSize="18sp"
           />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="356dp"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="179dp"
        android:backgroundTint="#17B1E3"
        android:textColorHint="#17B1E3"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/txtRCorreo"
            android:layout_width="356dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="160dp"
            android:backgroundTint="#17B1E3"
            android:ems="10"
            android:hint="@string/lblMCorreoRequerido"
            android:inputType="textEmailAddress"
            android:textColor="#17B1E3"
            android:textColorHint="#17B1E3"
            android:textColorLink="#17B1E3"
            android:textSize="18sp"
            android:textStyle="bold" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnRRegistrarse"
        android:layout_width="126dp"
        android:layout_height="33dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="2dp"
        android:background="#009688"
        android:fontFamily="@font/audiowide"
        android:text="@string/btnMRegistrarse"
        android:textColor="@color/colorIcons" />

    <CheckBox
        android:id="@+id/chkGuardarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="159dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/chckbMGuardarSesion"
        android:textColor="#17B1E3" />

    <ImageView
        android:id="@+id/imgvLogo"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        app:srcCompat="@drawable/logoprincipal_menu" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="84dp"
        android:layout_height="51dp"
        android:layout_above="@+id/btnRRegistrarse"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="23dp"
        app:srcCompat="@drawable/iconousuario" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:fontFamily="sans-serif"
        android:text="@string/lblMTitulo"
        android:textColor="#17B1E3"
        android:textSize="19sp" />

    <ImageButton
        android:id="@+id/btnFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginBottom="11dp"
        android:background="@drawable/icono_facebookm"
        app:srcCompat="@drawable/icono_facebookm" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/imageView"
        android:fontFamily="casual"
        android:text="@string/lblMRedesSociales"
        android:textColor="#17B1E3"
        android:textStyle="bold" />


</RelativeLayout>